[gd_scene load_steps=30 format=2]

[ext_resource path="res://heroes/fighter.png" type="Texture" id=1]
[ext_resource path="res://heroes/fighter.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.65454
height = 17.0904

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ) ],
"loop": true,
"name": "strike_3",
"speed": 24.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 11 ) ],
"loop": true,
"name": "wound",
"speed": 7.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 17 ), SubResource( 17 ) ],
"loop": false,
"name": "strike_2",
"speed": 24.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 21 ), SubResource( 21 ) ],
"loop": false,
"name": "strike_1",
"speed": 24.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "run",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=27]
radius = 3.88499

[node name="Fighter" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="hero_hit_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14 )
shape = SubResource( 1 )

[node name="fighter" type="Position2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="fighter"]
position = Vector2( 5, -24 )
frames = SubResource( 26 )
animation = "idle"
frame = 2
playing = true

[node name="strike1_hit_area" type="Area2D" parent="fighter"]

[node name="Shape" type="CollisionShape2D" parent="fighter/strike1_hit_area"]
position = Vector2( 18.6415, -18.5235 )
shape = SubResource( 27 )

[node name="strike2_hit_area" type="Area2D" parent="fighter"]

[node name="Shape" type="CollisionShape2D" parent="fighter/strike2_hit_area"]
position = Vector2( 16.3408, -18.5235 )
shape = SubResource( 27 )

[node name="strike3_hit_area" type="Area2D" parent="fighter"]

[node name="Shape" type="CollisionShape2D" parent="fighter/strike3_hit_area"]
position = Vector2( 12.0283, -22.3985 )
shape = SubResource( 27 )

[node name="combo_delay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="strike_delay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="take_damage" from="." to="." method="take_damage"]
[connection signal="animation_finished" from="fighter/AnimatedSprite" to="." method="stop_animation"]
[connection signal="frame_changed" from="fighter/AnimatedSprite" to="." method="get_frame"]
[connection signal="body_exited" from="fighter/strike1_hit_area" to="." method="attack"]
[connection signal="body_exited" from="fighter/strike2_hit_area" to="." method="attack"]
[connection signal="body_exited" from="fighter/strike3_hit_area" to="." method="attack"]
[connection signal="timeout" from="combo_delay" to="." method="combo_delay_timeout"]
[connection signal="timeout" from="strike_delay" to="." method="strike_delay_timeout"]
